--- a/now.json
+++ b/now.json
@@ -3,6 +3,7 @@
   "env": {
     "PUBLIC_KEY": "@public-key",
     "SECRET_KEY": "@secret-key",
+    "ACCESS_TOKEN": "@access-token",
     "DISQUS_EMAIL": "@disqus-email",
     "DISQUS_PASSWORD": "@disqus-password",
     "DISQUS_USERNAME": "Raincal",
@@ -10,7 +11,9 @@
     "DISQUS_SHORTNAME": "raincal",
     "GRAVATAR_CDN": "https://gravatar.cat.net/avatar/",
     "SITE_NAME": "Raincal's Blog",
-    "SMTP_HOST": "smtp.qq.com",
+    "SMTP_HOST": "smtp.office365.com",
+    "SMTP_PORT": 587,
+    "SMTP_SECURE": "STARTTLS",
     "SMTP_USERNAME": "admin@raincal.com",
     "SMTP_PASSWORD": "@smtp-password"
   }
