:arrow_up: Update disqus-php-api

--- a/now.json
+++ b/now.json
@@ -1,5 +1,10 @@
 {
+  "public": true,
+  "type": "docker",
   "alias": "raincal-blog-disqus",
+  "features": {
+    "cloud": "v1"
+  },
   "env": {
     "PUBLIC_KEY": "@public-key",
     "SECRET_KEY": "@secret-key",
